<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>xyz.xuminghai</groupId>
    <artifactId>m3u8-downloader</artifactId>
    <version>0.0.1</version>
    <name>m3u8-downloader</name>
    <packaging>jlink</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <javafx.version>22.0.1</javafx.version>
        <lombok.version>1.18.32</lombok.version>
        <javacpp.ffmpeg.version>6.1.1-1.5.10</javacpp.ffmpeg.version>
        <main.class>xyz.xuminghai.m3u8_downloader/xyz.xuminghai.m3u8_downloader.App</main.class>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.platform}</classifier>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-base</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.platform}</classifier>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- AtlantaFX 样式 -->
        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>atlantafx-base</artifactId>
            <version>2.0.1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-controls</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- logback经典，内部依赖了logback-core和slf4j -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.6</version>
        </dependency>

        <!-- 自动资源管理、自动生成 getter、setter、equals、hashCode 和 toString 等等！ -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- ffmpeg -->
        <dependency>
            <groupId>org.bytedeco</groupId>
            <artifactId>ffmpeg</artifactId>
            <version>${javacpp.ffmpeg.version}</version>
        </dependency>

        <dependency>
            <groupId>org.bytedeco</groupId>
            <artifactId>ffmpeg</artifactId>
            <version>${javacpp.ffmpeg.version}</version>
            <classifier>${javacpp.ffmpeg.platform}</classifier>
        </dependency>

        <!-- test -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit5</artifactId>
            <version>4.0.18</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>linux-x86_64</id>
            <activation>
                <os>
                    <name>linux</name>
                    <arch>amd64</arch>
                </os>
            </activation>
            <properties>
                <javafx.platform>linux</javafx.platform>
                <javacpp.ffmpeg.platform>linux-x86_64</javacpp.ffmpeg.platform>
            </properties>
        </profile>

        <profile>
            <id>linux-arm64</id>
            <activation>
                <os>
                    <name>linux</name>
                    <arch>arm64</arch>
                </os>
            </activation>
            <properties>
                <javafx.platform>linux-aarch64</javafx.platform>
                <javacpp.ffmpeg.platform>linux-arm64</javacpp.ffmpeg.platform>
            </properties>
        </profile>

        <profile>
            <id>windows-x86_64</id>
            <activation>
                <os>
                    <family>windows</family>
                    <arch>amd64</arch>
                </os>
            </activation>
            <properties>
                <javafx.platform>win</javafx.platform>
                <javacpp.ffmpeg.platform>windows-x86_64</javacpp.ffmpeg.platform>
            </properties>
        </profile>

        <profile>
            <id>macosx-x86_64</id>
            <activation>
                <os>
                    <name>mac os x</name>
                    <arch>x86_64</arch>
                </os>
            </activation>
            <properties>
                <javafx.platform>mac</javafx.platform>
                <javacpp.ffmpeg.platform>macosx-x86_64</javacpp.ffmpeg.platform>
            </properties>
        </profile>

        <profile>
            <id>macosx-arm64</id>
            <activation>
                <os>
                    <name>mac os x</name>
                    <arch>arm64</arch>
                </os>
            </activation>
            <properties>
                <javafx.platform>mac-aarch64</javafx.platform>
                <javacpp.ffmpeg.platform>macosx-arm64</javacpp.ffmpeg.platform>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jlink-plugin</artifactId>
                <version>3.2.0</version>
                <extensions>true</extensions>
                <configuration>
                    <launcher>${project.name}=${main.class}</launcher>
                    <addOptions>
                        <addOption>-XX:+UseZGC</addOption>
                    </addOptions>
                    <compress>zip-9</compress>
                    <stripDebug>true</stripDebug>
                    <ignoreSigningInformation>true</ignoreSigningInformation>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                    <verbose>true</verbose>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>